typescript/checker/tests/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments4_es6.ts.stderr
error: Unexpected token Some(RBrace)
 --> $DIR/tests/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments4_es6.ts:2:13
  |
2 | var v = { * }
  |             ^

